force-app/main/default/objects/Claim__c/Claim__c.object-meta.xml
<CustomObject>
    <description>Claims for promotions, damages, expiry, shortages</description>
    <label>Claim</label>
    <nameField>
        <displayFormat>CLM-{0000000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>