force-app/main/default/objects/Claim__c/fields/ApprovalStage__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStage__c</fullName>
    <label>ApprovalStage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>