force-app/main/default/objects/Claim__c/fields/BasisRef__c.field-meta.xml
<CustomField>
    <fullName>BasisRef__c</fullName>
    <label>BasisRef</label>
    <length>80</length>
    <type>Text</type>
</CustomField>