force-app/main/default/objects/Claim__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>Promo</fullName>
                <default>False</default>
                <label>Promo</label>
            </value>
            <value>
                <fullName>Damage</fullName>
                <default>False</default>
                <label>Damage</label>
            </value>
            <value>
                <fullName>Expiry</fullName>
                <default>False</default>
                <label>Expiry</label>
            </value>
            <value>
                <fullName>Short</fullName>
                <default>False</default>
                <label>Short</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>