force-app/main/default/objects/Claim__c/validationRules/Amount_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Greater_Than_Zero</fullName>
    <active>true</active>
    <description>Claim amount must be greater than zero</description>
    <errorConditionFormula>ISBLANK(Amount__c) || Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Claim amount must be greater than zero</errorMessage>
</ValidationRule>