force-app/main/default/objects/Claim__c/validationRules/Amount_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Positive</fullName>
    <active>true</active>
    <description>Claim amount must be positive</description>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Claim amount must be greater than zero</errorMessage>
</ValidationRule>